/*
 * Copyright (c) 2026 Adam Chen
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

package com.adam.app.mydeviceinfo.domain.model;

import androidx.annotation.NonNull;
import androidx.annotation.StringRes;

import com.adam.app.mydeviceinfo.R;
import com.adam.app.mydeviceinfo.common.Constants;

/**
 * Enum representing connectivity states with their associated resource IDs and keys.
 */
public enum ConnectivityState {
    WIFI(Constants.NET_STATUS_WIFI, R.string.net_wifi),
    CELLULAR(Constants.NET_STATUS_CELLULAR, R.string.net_cellular),
    DISCONNECTED(Constants.NET_STATUS_DISCONNECTED, R.string.net_disconnected),
    OTHER(Constants.NET_STATUS_OTHER, R.string.net_other);

    private final String mKey;
    private final int mResId;

    ConnectivityState(String key, @StringRes int resId) {
        this.mKey = key;
        this.mResId = resId;
    }

    @NonNull public String getKey() { return mKey; }
    @StringRes public int getResId() { return mResId; }

    /**
     * Finds the enum instance associated with the given key.
     * @param key The constant string key.
     * @return Matching ConnectivityState or OTHER if not found.
     */
    @NonNull
    public static ConnectivityState fromKey(String key) {
        for (ConnectivityState state : values()) {
            if (state.mKey.equals(key)) return state;
        }
        return OTHER;
    }
}
