@startuml
skinparam linetype ortho
skinparam packageStyle rectangle

package "Domain Layer" {
    class DeviceInfo <<Entity>> {
        - mDashboardData: DashboardData
        - mSystemSpecs: SystemSpecs
        - mNetworkStatus: NetworkStatus
    }

    class DashboardData <<Value Object>> {
        - mRamUsed/Total: long
        - mStorageUsed/Total: long
        - mBatteryPct/Temp/Volt: int
        - mBatteryStatus/Health: String
        - mUptime: long
    }

    class NetworkStatus <<Value Object>> {
        - mWifiStatus: String
        - mIpV4/IpV6: String
        - mWifiSignal/LinkSpeed: String
        - mCarrierName: String
        - mNetworkType: String
        - mSimStatus: String
        - mBluetooth/NfcEnabled: boolean
    }

    enum ConnectivityState <<Enum>> {
        WIFI
        CELLULAR
        DISCONNECTED
        OTHER
        + fromKey(key: String): ConnectivityState
        + getResId(): int
    }

    enum SimState <<Enum>> {
        READY
        ABSENT
        UNKNOWN
        + fromKey(key: String): SimState
    }

    enum BatteryStatus <<Enum>> {
        CHARGING
        DISCHARGING
        FULL
        ...
        + fromCode(code: int): BatteryStatus
    }

    enum BatteryHealth <<Enum>> {
        GOOD
        OVERHEAT
        DEAD
        ...
        + fromCode(code: int): BatteryHealth
    }

    interface IDeviceRepository <<Interface>> {
        + fetchDeviceInfo(): DeviceInfo
        + getDeviceInfoStream(): LiveData<DeviceInfo>
        + exportDeviceInfo(info: DeviceInfo): boolean
        + runHardwareTest(type: int): void
    }

    DeviceInfo *-- DashboardData
    DeviceInfo *-- NetworkStatus
}
@enduml
